fixed various issues - image on show, refresh on show, logo not showing up, faq additional button, completed topics selection frontend

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,6 +14,10 @@
   padding-bottom: 120px;
 }
 
+.show-page {
+  background-color: white;
+}
+
 // .card-title {
 //   font-size: 30px;
 //   font-weight: bold;
