--- a/app/assets/stylesheets/components/_topics.scss
+++ b/app/assets/stylesheets/components/_topics.scss
@@ -36,7 +36,7 @@
   text-align: center;
   border: 1px solid #14172C;
   cursor: pointer;
-  padding: 10px;
+  padding: 10px 5px;
   border-radius: 8px;
   background-color: #14172C;
   color: white;
